@@ -32,6 +32,7 @@ Bugs fixed
 - Bug 1669 - ns-3 should support binding two and three (possibly more) arguments
 - Bug 1689 - IPv6 shouldn't add a default gateway without checking the Router lifetime
 - Bug 1700 - Ipv6RawSocket does not honor the bound address when sending packets
+- Bug 1701 - Ipv6StaticRouting: the source address should match the destination scope
 
 Known issues
 ------------
